# xxx256

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
documentation/: IMPLEMENTATION-NOTES.md  LOGIC-REVIEW.md  PERFORMANCE.md  XXX-256-PRD.md
examples/: basic.c
include/: xxx256.h  xxx256_hazmat.h
independent/: xxx256_independent.c  xxx256_independent.h
src/: xxx256_api.c  xxx256_core.c  xxx256_envelope.c  xxx256_internal.h  xxx256_permutation.c  xxx256_random.c
tests/: test_xxx256.c
tools/: benchmark.c  generate_tables.c
